<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:background="#000000" 
  android:layout_height="fill_parent">
  
  <view class="com.ledpixelart.piledriver.MainActivity$GifView" 
    android:id="@+id/gifView"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" />

    <!--
         <ImageView
        android:id="@+id/onetimesetupImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/onetimesetup" />
    -->
    
      <TextView
        android:id="@+id/firstTimeSetup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical|left"
        android:text="@string/startup_verbage_1"
        android:textColor="#DB2645"
        android:textSize="30sp" />
      
      <TextView
        android:id="@+id/firstTimeSetup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical|left"
        android:text="@string/startup_verbage_2"
        android:textColor="#26DBBC"
        android:textSize="26sp" />
      
      <TextView
        android:id="@+id/firstTimeInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical|left"
        android:text="@string/firstTime_instructions"
        android:textColor="#DB2645"
        android:textSize="26sp" />

   <TextView
        android:id="@+id/firstTimeSetupCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:gravity="center|center_vertical|left"
        android:text="***"
        android:textColor="#26DBBC"
        android:textSize="30sp" />

   <GridView  
        android:id="@+id/sdcard"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:background="#565051"    
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp" 
        android:stretchMode="columnWidth"
        android:gravity="center" />
   
     <Button
        android:id="@+id/reload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reload"/>
    <GridView
        android:id="@+id/gridview"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"/>

</LinearLayout>
