<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

     <view class="com.ioiomint.pixelanimate.MainActivity$GifView" 
    android:id="@+id/gifView"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/firstTimeSetup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:gravity="center|center_vertical|left"
        android:paddingBottom="50dp"
        android:paddingTop="5dp"
        android:text="@string/startup_verbage_1"
        android:textColor="#000000"
        android:textSize="26sp" />

    <!--
         <ImageView
        android:id="@+id/onetimesetupImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/onetimesetup" />
    -->

    <TextView
        android:id="@+id/firstTimeInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:gravity="center|center_vertical|left"
        android:paddingTop="5dp"
        android:text="@string/firstTime_instructions"
        android:textColor="#000000"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/firstTimeSetup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/firstTimeSetup1"
        android:gravity="center|center_vertical|left"
        android:text="@string/startup_verbage_2"
        android:textColor="#000000"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/firstTimeSetupCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/firstTimeInstructions"
        android:layout_alignRight="@+id/firstTimeSetup1"
        android:layout_marginBottom="43dp"
        android:layout_marginRight="50dp"
        android:gravity="center|center_vertical|left"
        android:text="***"
        android:textColor="#DB2645"
        android:textSize="30sp" />
    
     <GridView  
        android:id="@+id/sdcard"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:background="#FFFFFF"    
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp" 
        android:stretchMode="columnWidth"
        android:gravity="center" />

</RelativeLayout>   